@@ -11,14 +11,11 @@ AC_AIX
 AC_PROG_CC
 AC_PROG_MAKE_SET
 
-AM_PATH_GLIB_2_0(2.0.0,,AC_MSG_ERROR([libglib2-dev not found !]))
+AM_PATH_GLIB_2_0(2.0.0,,AC_MSG_ERROR([*** No libglib2-dev found.]))
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION
-AC_CHECK_FUNCS([dirfd openat attropen])
-#AC_CHECK_LIB(attr, lgetxattr)
-AC_CHECK_LIB(attr, lgetxattr)
-AC_CHECK_HEADERS(attr/xattr.h,,,[AC_INCLUDES_DEFAULT])
-AC_CHECK_HEADERS([getopt.h sys/vfs.h sys/statvfs.h pcre.h])
+AC_CHECK_FUNCS([dirfd])
+AC_CHECK_HEADERS([getopt.h sys/vfs.h sys/statvfs.h])
 AC_CHECK_HEADERS(sys/param.h sys/mount.h,,,
 [
   [
@@ -26,6 +23,13 @@ AC_CHECK_HEADERS(sys/param.h sys/mount.h,,,
    # include <sys/param.h>
    #endif
   ]
+])
+AC_CHECK_LIB(pcre, pcre_info, 
+	[
+	    LIBS="$LIBS -lpcre"
+	],
+	[
+	AC_MSG_ERROR([*** No regex library found.])
 ])
 AC_C_BIGENDIAN
 
