@@ -25,7 +25,6 @@
 #include <libgen.h>
 #include <syslog.h>
 #include <errno.h>
-#include <regex.h>
 #include <utime.h>
 #include <sys/stat.h>
 #include <sys/types.h>
@@ -48,6 +47,7 @@
 #define VERSION     "@PACKAGE_VERSION@"
 #define PROGNAME    "@PACKAGE_NAME@"
 
+#define REG_VECTOR	30
 #define BUFSIZE         4096
 #define NOBACKUP        ".nobackup"
 #define NULL_DUMP       0
@@ -102,7 +102,7 @@ gboolean gfunc_remove(gpointer data, gpointer value, gpointer usr);
 gboolean gfunc_new(gpointer data, gpointer value, gpointer usr);
 gboolean gfunc_substract(gpointer data, gpointer value, gpointer diff);
 gboolean gfunc_remove_path(gpointer data, gpointer value, gpointer path);
-gboolean gfunc_regexp(GSList *l, char *n);
+gboolean gfunc_regexp(GSList *l, char *n, size_t len);
 gboolean gfunc_tree2list(gpointer data, gpointer value, 
 	__attribute__((unused)) gpointer l);
 
