@@ -2,7 +2,9 @@ xx yyy iii: 0.6.2 Miek <miek@miek.nl>
  * Added -R switch, which will reverse rdup's output
    This is a depth first output, first the directories
    then the files.
- * use libpcre3 for regular expressions, MUCH much more powerfull
+ * Use libpcre3 for regular expressions, MUCH much more powerfull
+   than the POSIX regex previously used. This does add an extra
+   dependency for libpcre3 (requested by Sorin Ionescu)
 
 
 31 Jul 208: 0.6.1 Miek <miek@miek.nl>
